# proximal-projection-algorithm

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml  copy-code-to-docs.yml  copy-to-docs.yml  docs-site.yml  docs-website.yml  docs.yml  python-linting.yml  website.yml
basis_pursuit/: index.html
docs/: basis_pursuit.ipynb  basis_pursuit.md  index.md
docs/notebooks/: earth_movers_distance.ipynb  stable_principal_component_pursuit.ipynb
docs/overrides/: main.html
docs/stylesheets/: extra.css
notebooks/basis_pursuit/: basis_pursuit.ipynb  index.html
notebooks/earth_movers_distance/: index.html
notebooks/stable_matrix_completion/: index.html
notebooks/stable_principal_component_pursuit/: index.html  stable_principal_component_pursuit.ipynb
overrides/: main.html
results/: bp-obj-plots.csv  bp-res-plots.csv  bp-times.tex  bp-viol-plots.csv  emd-obj-plots.csv  emd-res-plots.csv  emd-times.tex  emd-viol-plots.csv  smc-obj-plots-10.csv  smc-obj-plots-50.csv  smc-res-plots-10.csv  smc-res-plots-50.csv  smc-table.tex  smc-viol-plots-10.csv  smc-viol-plots-50.csv  spcp-obj-plots.csv  spcp-res-plots.csv  spcp-viol-plots.csv
search/: search_index.json
src/: basis_pursuit.ipynb  earth_movers_distance.ipynb  stable_matrix_completion.ipynb
src/.ipynb_checkpoints/: EMD-v3-checkpoint.ipynb  earth_movers_distance-checkpoint.ipynb  matrix_completion-checkpoint.ipynb
src/basis_pursuit/: basis_pursuit_experiment.py  (+3 more)
stylesheets/: extra.css
(+2 files in other folders)
