[tool.poetry]
name = "proximal-projection"
version = "0.1.0"
description = "Numerical examples using proximal projection algorithm"
authors = ["Howard Heaton <research@typal.academy>"]
package-mode = false  


[tool.poetry.dependencies]
python = ">=3.12"
pydantic = "^2.10.6"
numpy = "^2.2.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^7.1.2"
mypy = "^1.4.0"
pylint = "^3.3.5"


[tool.black]
line-length = 88
target-version = ['py312']


[tool.flake8]
max-line-length = 88


[tool.mypy]
files = ["src/"]
disallow_untyped_calls = true
check_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true
